crates/fittle-cli/tests/snapshots/corpus__info__edge__rice__gzip2-i16-original.fits.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "derived": {
    "plate_solved": false
  },
  "fields": {},
  "file_name": {},
  "health": [],
  "image": {
    "bitpix": 16,
    "compressed": false,
    "hdu": 0,
    "height": 48,
    "planes": 1,
    "width": 64
  },
  "notes": [],
  "origin": {
    "software": []
  },
  "path": "edge/rice/gzip2-i16-original.fits",
  "schema": "fittle.info/1",
  "verdict": {
    "confidence": 0,
    "evidence": [
      {
        "supports": "single",
        "text": "no STACKCNT / NCOMBINE",
        "weight": 25
      },
      {
        "supports": "single",
        "text": "BITPIX=16",
        "weight": 20
      }
    ],
    "frame": "unknown",
    "integrated": false,
    "label": "Unknown",
    "processed": false
  }
}
